webapp/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: basic-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: basic-config
          configMap:
            name: basic-config
