webapp/service.yml
  apiVersion: v1
  kind: Service
  metadata:
    name: example-webapp-service
  spec:
    selector:
      app: webapp
    ports:
      - port: 80
        targetPort: 80
