webapp/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - host: webapp.cgerber.local
      http:
        paths:
          - backend:
              service:
                name: example-webapp-service
                port:
                  number: 80
            path: "/"
            pathType: "Prefix"
